poprawki w ogolnych stylach, button uniwersalny, flex itp.

--- a/index.html
+++ b/index.html
@@ -21,71 +21,97 @@
 
   </script>
 
-</body>
-<div id="navbar-mobile" class="navbar-mobile-overlay">
-  <div class="navbar-mobile-list-div">
-    <a href="javascript:void(0)" class="navbar-mobile--close-btn" onclick="closeNav()">&times;</a>
-    <div class="navbar-mobile-logo">
-      <img src="img/logo.png" alt="Website logo" />
-    </div>
-    <ul class="navbar-mobile-items--ul">
-      <li class="navbar-mobile-items--li">
-        <a href="#" class="navbar-mobile-items--li-a">Home</a>
-      </li>
-      <li class="navbar-mobile-items--li">
-        <a href="#" class="navbar-mobile-items--li-a">About</a>
-      </li>
-      <li class="navbar-mobile-items--li">
-        <a href="#" class="navbar-mobile-items--li-a">Pages </a>
-      </li>
-      <li class="navbar-mobile-items--li">
-        <a href="#" class="navbar-mobile-items--li-a">Auth Pages </a>
-      </li>
-      <li class="navbar-mobile-items--li">
-        <a href="#" class="navbar-mobile-items--li-a">Features</a>
-      </li>
-      <li class="navbar-mobile-items--li">
-        <a href="#" class="navbar-mobile-items--li-a">FAQs</a>
-      </li>
-      <li class="navbar-mobile-items--li">
-        <a href="#" class="navbar-mobile-items--li-a">Try For Free</a>
-      </li>
-    </ul>
-  </div>
-</div>
-
-<div class="navbar">
-  <div class="navbar-sizer">
-    <img src="img/logo.png" alt="Website logo" class="navbar-logo" />
-    <div class="navbar-items show-full-elements">
-      <ul class="navbar-items--ul">
-        <li class="navbar-items--li"><a href="#">Home<i class="fa fa-caret-down"></i></a></li>
-        <li class="navbar-items--li"><a href="#">About</a></li>
-        <li class="navbar-items--li"><a href="#">Pages <i class="fa fa-caret-down"></i></a></li>
-        <li class="navbar-items--li"><a href="#">Auth Pages <i class="fa fa-caret-down"></i></a></li>
-        <li class="navbar-items--li"><a href="#">Features</a></li>
-        <li class="navbar-items--li"><a href="#">FAQs</a></li>
-        <li><button type="button" class="navbar-items--btn">Try For Free</button></li>
+  <div id="navbar-mobile" class="navbar-mobile-overlay">
+    <div class="navbar-mobile-list-div">
+      <a href="javascript:void(0)" class="navbar-mobile--close-btn" onclick="closeNav()">&times;</a>
+      <div class="navbar-mobile-logo">
+        <img src="./img/logo.png" alt="Website logo" />
+      </div>
+      <ul class="navbar-mobile-items--ul">
+        <li class="navbar-mobile-items--li">
+          <a href="#" class="navbar-mobile-items--li-a">Home</a>
+        </li>
+        <li class="navbar-mobile-items--li">
+          <a href="#" class="navbar-mobile-items--li-a">About</a>
+        </li>
+        <li class="navbar-mobile-items--li">
+          <a href="#" class="navbar-mobile-items--li-a">Pages </a>
+        </li>
+        <li class="navbar-mobile-items--li">
+          <a href="#" class="navbar-mobile-items--li-a">Auth Pages </a>
+        </li>
+        <li class="navbar-mobile-items--li">
+          <a href="#" class="navbar-mobile-items--li-a">Features</a>
+        </li>
+        <li class="navbar-mobile-items--li">
+          <a href="#" class="navbar-mobile-items--li-a">FAQs</a>
+        </li>
+        <li class="navbar-mobile-items--li">
+          <a href="#" class="navbar-mobile-items--li-a">Try For Free</a>
+        </li>
       </ul>
     </div>
-    <div class="navbar-items hide-full-elements"><i class="fa fa-bars fa-2x" onclick="openNav()"></i></div>
   </div>
-</div>
 
-<div class="ball-left">
-  <img src="img/b-shape1.png" alt="Decoration shape on the left" />
-</div>
-<div class="ball-right">
-  <img src="img/b-shape2.png" alt="Decoration shape on the right top" class="b-shape2" />
-  <img src="img/b-shape3-1.png" alt="Decoration shape on the right" class="b-shape3" />
-</div>
+  <div class="navbar">
+    <div class="navbar-sizer">
+      <img src="./img/logo.png" alt="Website logo" class="navbar-logo" />
+      <div class="navbar-items show-full-elements">
+        <ul class="navbar-items--ul">
+          <li class="navbar-items--li"><a href="#">Home<i class="fa fa-caret-down"></i></a></li>
+          <li class="navbar-items--li"><a href="#">About</a></li>
+          <li class="navbar-items--li"><a href="#">Pages <i class="fa fa-caret-down"></i></a></li>
+          <li class="navbar-items--li"><a href="#">Auth Pages <i class="fa fa-caret-down"></i></a></li>
+          <li class="navbar-items--li"><a href="#">Features</a></li>
+          <li class="navbar-items--li"><a href="#">FAQs</a></li>
+          <li class="navbar-items--li"><button type="button" class="navbar-items--btn">Try For Free</button></li>
+        </ul>
+      </div>
+      <div class="navbar-items hide-full-elements"><i class="fa fa-bars fa-2x" onclick="openNav()"></i></div>
+    </div>
+  </div>
 
+  <div class="ball-left">
+    <img src="img/b-shape1.png" alt="Decoration shape on the left" />
+  </div>
+  <div class="ball-right">
+    <img src="img/b-shape2.png" alt="Decoration shape on the right top" class="b-shape2" />
+    <img src="img/b-shape3-1.png" alt="Decoration shape on the right" class="b-shape3" />
+  </div>
 
-<div class="part-container top-div-margin ">
-  <div class="part-container">
+  <div class="part-container top-div-margin ">
     <div class="content">
-      <div>
-
+      <div class="top-div-left flex-center">
+        <div class="top-border-title top-border-title--margin-top">
+          <p class="top-border-title--p">Creative SAAS website</p>
+        </div>
+        <div class="top-div-title">
+          <h1 class="h-main">Best website for <span class="text-thinner">SAAS</span> business</h1>
+        </div>
+        <div class="flex-center top-div-short-desc">
+          <p class="top-div-short-desc--p">Even in the most uncertain times, Help Scout keeps you connected with
+            customers.</p>
+        </div>
+        <div class="top-div-buttons flex-center">
+          <div class="top-div-buttons--btn-div"><button type="button">Try it free</button></div>
+          <div class="top-div-buttons--btn-div"><button type="button">Get a demo</button></div>
+        </div>
+        <p class="top-div-cc-info">No credit card required*</p>
+      </div>
+      <div class="top-div-right">
+        <img src="img/b-laptop-1.png" alt="Laptop" class="top-div-right--img" />
+      </div>
+    </div>
+  </div>
+  <div class="part-container services-div">
+    <div class="content">
+      <div class="flex-center">
+        <div class="top-border-title">
+          <p class="top-border-title--p">Our awesome services</p>
+        </div>
+      </div>
+      <div class="services-title flex-center">
+        <h2 class="services-title--h">We can give the <span class="text-thinner">best facilities</span> for you!</h2>
       </div>
     </div>
   </div>
@@ -107,8 +133,7 @@
   <div class="part-container">
     <div class="content"></div>
   </div>
-  <div class="part-container">
-    <div class="content"></div>
-  </div>
+
+</body>
 
 </html>
