--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@
           <p class="subscribe--p">Subscribe now!</p>
           <p>Get the lastest update.</p>
         </div>
-
+        <img src="img/cloud-5.png" alt="Clouds" class="picture-sizer-clouds">
       </div>
     </div>
     <div class="content">
