--- a/index.html
+++ b/index.html
@@ -500,14 +500,14 @@
             <hr>
             <div class="pricing-box-element-line flex">
               <div class="pricing-box-element-line-green">
-                <i class="fa fa-check" aria-hidden="true"></i>
+                <i class="fa fa-times" aria-hidden="true"></i>
               </div>
               <p class="pricing-box-element-line--p">Initial Backlink Analysis</p>
             </div>
             <hr>
             <div class="pricing-box-element-line flex">
               <div class="pricing-box-element-line-green">
-                <i class="fa fa-check" aria-hidden="true"></i>
+                <i class="fa fa-times" aria-hidden="true"></i>
               </div>
               <p class="pricing-box-element-line--p">10 Keyword Optimization</p>
             </div>
@@ -609,14 +609,14 @@
             <hr>
             <div class="pricing-box-element-line flex">
               <div class="pricing-box-element-line-green">
-                <i class="fa fa-times" aria-hidden="true"></i>
+                <i class="fa fa-check" aria-hidden="true"></i>
               </div>
               <p class="pricing-box-element-line--p">Initial Backlink Analysis</p>
             </div>
             <hr>
             <div class="pricing-box-element-line flex">
               <div class="pricing-box-element-line-green">
-                <i class="fa fa-times" aria-hidden="true"></i>
+                <i class="fa fa-check" aria-hidden="true"></i>
               </div>
               <p class="pricing-box-element-line--p">10 Keyword Optimization</p>
             </div>
@@ -636,12 +636,13 @@
   </div>
 
   <div class="part-container bottom-box">
-    <div class="subscribe-box">
+    <div class="part-container subscribe-box">
       <div class="content">
         <div class="flex-center subscribe-box-content">
           <p class="subscribe--p">Subscribe now!</p>
           <p>Get the lastest update.</p>
         </div>
+        <img src="img/cloud-5.png" alt="Clouds" class="picture-sizer-clouds-s">
         <img src="img/cloud-5.png" alt="Clouds" class="picture-sizer-clouds">
       </div>
     </div>
